# oculite

./: .gitattributes  .gitignore  README.md  TODO.md
server/: .gitignore  Cargo.toml  Rocket.toml  Shuttle.toml
server/.sqlx/: query-002d293c501005c025256289cb7ef4f89f767c53ad62a544b68cb7e8f6750c96.json  query-080251c503b5dde954042be5e6159a03de95c0c1ca29b5cafe443de31eec6df4.json  query-16af2d5af5afa4d6dbec80883c997f6c4b4677611dcdc3c339e9fbd9ad25f262.json  query-1b19b53ea7655d3d73a6be04fe0c247c22f825fad83356d6ccbb6c51f129c023.json  query-1b69b92460481a5d22996153916063e27aa2a1f39c1bce523b56329474fcb15d.json  query-2199d77ace9dfa4cd493fe218b45d3b833291a4e671d0205317496af255093d1.json  query-44769a01bc3d374f53320d1f3a40006137a282d7f8203dcecc98d35bd646eab8.json  query-533fb5fbf3c38b62ff78374e88b968391942f6519992c2933e068cc2ffc24075.json  query-5ee05088465ebab571e4f5a1cdbba2d8eb00733525f7521b54925939e9c2b0bb.json  query-734ad662917ab05b0429c013390c18a2e471af2e19132910426c9e07e8ec460b.json  query-7a1fa26eb0cc65093d608f1ba91526efbe779f6e5a58c34e37f3875c5e3acd1f.json  query-7cb4f158731f1e3bef75a67739f57b836e6a769da0114722b34722d2c95083b9.json  query-8d30abfa82e270769c27d86eeb4f14f7a3df7dc00de377c1c1ae70fb858883cf.json  query-9c31c1a51225c32894cc85d036dc38e9e1b0007d7f7b5ca8a8b172520c83c493.json  query-9d4a29e4484f3d9b8449387af04d81d13fa464f1072161efd5d742354c1633f3.json  query-d58a3097e2e9080cccc2ffe7e1b230d821911a577c512b141abc374527f5fbb7.json  query-d88b2f1b8d2878cbd3dd59e709abda1fa4cf78ef5f5a14e8bf866b90d9173954.json  (+3 more)
server/migrations/: 01_oculite.sql
server/src/: api.rs  (+3 more)
(+105 files in other folders)
